--- a/index.html
+++ b/index.html
@@ -24,109 +24,105 @@
     </style>
 </head>
 <body>
-<article class="card">
-    <img class="card_img" src="../recipe-page-main/assets/images/image-omelette.jpeg" alt="delicious omelette with herbs"
-         width="800"
-         height="500">
+<main>
+    <article class="recipe">
+        <img class="recipe_preview" src="../recipe-page-main/assets/images/image-omelette.jpeg"
+             alt="delicious omelette with herbs"
+             width="800"
+             height="500">
 
-    <section>
-        <h1 class="header">Simple Omelette Recipe</h1>
+        <section class="recipe_description">
+            <h1 class="recipe_header">Simple Omelette Recipe</h1>
 
-        <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
-            to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+            <p class="recipe_annotation">An easy and quick dish, perfect for any meal. This classic omelette
+                combines beaten eggs cooked
+                to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-        <figure>
-            <figcaption><strong>Preparation time</strong></figcaption>
-            <ul>
-                <li><strong>Total:</strong> Approximately 10 minutes</li>
-                <li><strong>Preparation:</strong> 5 minutes</li>
-                <li><strong>Cooking:</strong> 5 minutes</li>
-            </ul>
-        </figure>
+            <section class="recipe_preparation-time">
+                <figure>
+                    <figcaption><strong>Preparation time</strong></figcaption>
+                    <ul class="list">
+                        <li class="list_item"><strong>Total:</strong> Approximately 10 minutes</li>
+                        <li class="list_item"><strong>Preparation:</strong> 5 minutes</li>
+                        <li class="list_item"><strong>Cooking:</strong> 5 minutes</li>
+                    </ul>
+                </figure>
+            </section>
 
-        <h2>Ingredients</h2>
+            <section class="recipe_ingredients">
+                <h2 class="recipe_subheading">Ingredients</h2>
 
-        <ul>
-            <li>2-3 large eggs</li>
-            <li> Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-        </ul>
-    </section>
-    <section>
-        <h2>Instructions</h2>
-        <ol>
-            <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they
-                are well mixed.
-                You can add a tablespoon of water or milk for a fluffier texture.
-            </li>
+                <ul>
+                    <li>2-3 large eggs</li>
+                    <li> Salt, to taste</li>
+                    <li>Pepper, to taste</li>
+                    <li>1 tablespoon of butter or oil</li>
+                    <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                </ul>
+            </section>
+        </section>
 
-            <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
-            </li>
+        <section class="recipe_instructions">
+            <h2 class="recipe_subheading">Instructions</h2>
 
-            <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt
-                the pan to ensure
-                the eggs evenly coat the surface.
-            </li>
+            <ol>
+                <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they
+                    are well mixed.
+                    You can add a tablespoon of water or milk for a fluffier texture.
+                </li>
 
-            <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still
-                slightly runny in the
-                middle, sprinkle your chosen fillings over one half of the omelette.
-            </li>
+                <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
+                </li>
 
-            <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold
-                it over the
-                fillings. Let it cook for another minute, then slide it onto a plate.
-            </li>
+                <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt
+                    the pan to ensure
+                    the eggs evenly coat the surface.
+                </li>
 
-            <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
-        </ol>
-    </section>
+                <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still
+                    slightly runny in the
+                    middle, sprinkle your chosen fillings over one half of the omelette.
+                </li>
 
-    <section>
-        <h2>Nutrition</h2>
+                <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold
+                    it over the
+                    fillings. Let it cook for another minute, then slide it onto a plate.
+                </li>
 
-        The table below shows nutritional values per serving without the additional fillings.
+                <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
+            </ol>
+        </section>
 
-        <table>
-            <tr>
-                <td>Calories</td>
-                <td>277kca</td>
-            </tr>
+        <section class="recipe_nutrition">
+            <h2>Nutrition</h2>
 
-            <tr>
-                <td>Carbs</td>
-                <td>0g</td>
-            </tr>
+            <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
-            <tr>
-                <td>Protein</td>
-                <td>20g</td>
-            </tr>
+            <table>
+                <tr>
+                    <td>Calories</td>
+                    <td>277kca</td>
+                </tr>
+                <tr>
+                    <td>Carbs</td>
+                    <td>0g</td>
+                </tr>
+                <tr>
+                    <td>Protein</td>
+                    <td>20g</td>
+                </tr>
+                <tr>
+                    <td>Fat</td>
+                    <td>22g</td>
+                </tr>
+            </table>
+        </section>
+    </article>
 
-            <tr>
-                <td>Fat</td>
-                <td>22g</td>
-            </tr>
-        </table>
-    </section>
-</article>
-
-<!--    <img class="pixel-perfect-image"
-         src="/design/desktop-design.jpg" alt=""
-         style="
-         width: 100%;
-         position: absolute;
-         top: 0;
-         left: 50%;
-         transform: translateX(-50%);
-         opacity: 0.5;"
-    />-->
-
-<div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-</div>
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+    </div>
+</main>
 </body>
 </html>
