--- a/index.html
+++ b/index.html
@@ -108,24 +108,16 @@
             <p class="recipe__nutrition-description">The table below shows nutritional values per serving without the
                 additional fillings.</p>
 
-            <table class="recipe__nutrition-table">
-                <tr>
-                    <td class="recipe__nutrition-input">Calories</td>
-                    <td class="recipe__nutrition-amount">277kca</td>
-                </tr>
-                <tr>
-                    <td class="recipe__nutrition-input">Carbs</td>
-                    <td class="recipe__nutrition-amount">0g</td>
-                </tr>
-                <tr>
-                    <td class="recipe__nutrition-input">Protein</td>
-                    <td class="recipe__nutrition-amount">20g</td>
-                </tr>
-                <tr>
-                    <td class="recipe__nutrition-input">Fat</td>
-                    <td class="recipe__nutrition-amount">22g</td>
-                </tr>
-            </table>
+            <div class="recipe__nutrition-table">
+                <div class="recipe__nutrition-input">Calories</div>
+                <div class="recipe__nutrition-amount">277kca</div>
+                <div class="recipe__nutrition-input">Carbs</div>
+                <div class="recipe__nutrition-amount">0g</div>
+                <div class="recipe__nutrition-input">Protein</div>
+                <div class="recipe__nutrition-amount">20g</div>
+                <div class="recipe__nutrition-input">Fat</div>
+                <div class="recipe__nutrition-amount">22g</div>
+            </div>
         </section>
     </article>
 
