Completion of the mobile version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
@@ -11,7 +10,6 @@
 
     <title>Frontend Mentor | Recipe page</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
         .attribution {
             font-size: 11px;
@@ -25,12 +23,13 @@
 </head>
 <body>
 <main>
-    <article class="recipe">
-        <img class="recipe__preview" src="../recipe-card/assets/images/image-omelette.jpeg"
-             alt="delicious omelette with herbs"
-             width="1312"
-             height="600">
+    <img class="recipe__preview" src="../recipe-card/assets/images/image-omelette.jpeg"
+         alt="delicious omelette with herbs"
+         width="1312"
+         height="600"
+    >
 
+    <article class="recipe">
         <h1 class="recipe__header">Simple Omelette Recipe</h1>
 
         <p class="recipe__annotation">An easy and quick dish, perfect for any meal. This classic omelette
@@ -39,14 +38,13 @@
         </p>
 
         <section class="recipe__preparation-time">
-            <figure>
-                <figcaption class="recipe__preparation-time-title"><strong>Preparation time</strong></figcaption>
-                <ul class="recipe__preparation-time-list">
-                    <li class="recipe__preparation-time-item"><strong>Total:</strong> Approximately 10 minutes</li>
-                    <li class="recipe__preparation-time-item"><strong>Preparation:</strong> 5 minutes</li>
-                    <li class="recipe__preparation-time-item"><strong>Cooking:</strong> 5 minutes</li>
-                </ul>
-            </figure>
+            <h2 class="recipe__preparation-time-title"><strong>Preparation time</strong></h2>
+
+            <ul class="recipe__preparation-time-list">
+                <li class="recipe__preparation-time-item"><strong>Total:</strong> Approximately 10 minutes</li>
+                <li class="recipe__preparation-time-item"><strong>Preparation:</strong> 5 minutes</li>
+                <li class="recipe__preparation-time-item"><strong>Cooking:</strong> 5 minutes</li>
+            </ul>
         </section>
 
         <section class="recipe__ingredients">
@@ -71,29 +69,24 @@
                     are well mixed.
                     You can add a tablespoon of water or milk for a fluffier texture.
                 </li>
-
                 <li class="recipe__instructions-item"><strong>Heat the pan:</strong> Place a non-stick frying pan over
                     medium heat and add butter or oil.
                 </li>
-
                 <li class="recipe__instructions-item"><strong>Cook the omelette:</strong> Once the butter is melted and
                     bubbling, pour in the eggs. Tilt
                     the pan to ensure
                     the eggs evenly coat the surface.
                 </li>
-
                 <li class="recipe__instructions-item"><strong>Add fillings (optional):</strong> When the eggs begin to
                     set at the edges but are still
                     slightly runny in the
                     middle, sprinkle your chosen fillings over one half of the omelette.
                 </li>
-
                 <li class="recipe__instructions-item"><strong>Fold and serve:</strong> As the omelette continues to
                     cook, carefully lift one edge and fold
                     it over the
                     fillings. Let it cook for another minute, then slide it onto a plate.
                 </li>
-
                 <li class="recipe__instructions-item"><strong>Enjoy:</strong> Serve hot, with additional salt and pepper
                     if needed.
                 </li>
@@ -108,25 +101,24 @@
 
             <table class="recipe__nutrition-table">
                 <tr>
-                <td class="recipe__nutrition-input">Calories</td>
-                <td class="recipe__nutrition-amount">277kca</td>
+                    <td class="recipe__nutrition-input">Calories</td>
+                    <td class="recipe__nutrition-amount">277kca</td>
                 </tr>
                 <tr>
-                <td class="recipe__nutrition-input">Carbs</td>
-                <td class="recipe__nutrition-amount">0g</td>
+                    <td class="recipe__nutrition-input">Carbs</td>
+                    <td class="recipe__nutrition-amount">0g</td>
                 </tr>
                 <tr>
-                <td class="recipe__nutrition-input">Protein</td>
-                <td class="recipe__nutrition-amount">20g</td>
+                    <td class="recipe__nutrition-input">Protein</td>
+                    <td class="recipe__nutrition-amount">20g</td>
                 </tr>
                 <tr>
-                <td class="recipe__nutrition-input">Fat</td>
-                <td class="recipe__nutrition-amount">22g</td>
+                    <td class="recipe__nutrition-input">Fat</td>
+                    <td class="recipe__nutrition-amount">22g</td>
                 </tr>
             </table>
         </section>
     </article>
-
 </main>
 
 <div class="attribution">
