--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <table class="recipe__nutrition-table">
                 <tr>
                     <td class="recipe__nutrition-input">Calories</td>
-                    <td class="recipe__nutrition-amount">277kca</td>
+                    <td class="recipe__nutrition-amount">277kcal</td>
                 </tr>
                 <tr>
                     <td class="recipe__nutrition-input">Carbs</td>
